samples/_failures_safe/1761286317_ba8ca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c2bbde3.c: In function ‘main’:
./samples/SAFE/__tmp_2c2bbde3.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("Tokens found (%zu):\n", token_count);
      |     ^~~~~~
